--- a/examples/chat/home.html
+++ b/examples/chat/home.html
@@ -51,41 +51,65 @@ window.onload = function () {
 };
 </script>
 <style type="text/css">
-html {
-    overflow: hidden;
-}
-
-body {
-    overflow: hidden;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    background: gray;
-}
-
-#log {
-    background: white;
-    margin: 0;
-    padding: 0.5em 0.5em 0.5em 0.5em;
-    position: absolute;
-    top: 0.5em;
-    left: 0.5em;
-    right: 0.5em;
-    bottom: 3em;
-    overflow: auto;
-}
-
-#form {
-    padding: 0 0.5em 0 0.5em;
-    margin: 0;
-    position: absolute;
-    bottom: 1em;
-    left: 0px;
-    width: 100%;
-    overflow: hidden;
-}
-
+    body {  
+        font-family: Arial, sans-serif;  
+        display: flex;  
+        flex-direction: column; /* 使子元素垂直排列 */  
+        align-items: center;  
+        height: 100vh;  
+        background-color: #f4f4f4;  
+        margin: 0;  
+        padding: 20px; /* 为页面添加一些内边距 */  
+        box-sizing: border-box; /* 确保内边距不会增加总宽度 */  
+    }  
+    
+    #form {  
+        background-color: #fff;  
+        padding: 20px;  
+        border-radius: 8px;  
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  
+        width: 300px;  
+        text-align: center;  
+    }  
+  
+    #form input[type="text"] {  
+        width: calc(100% - 22px); /* 减去padding和border的宽度 */  
+        padding: 10px;  
+        margin-bottom: 10px;  
+        border: 1px solid #ccc;  
+        border-radius: 4px;  
+        font-size: 16px;  
+    }  
+  
+    #form input[type="submit"] {  
+        background-color: #007BFF;  
+        color: white;  
+        border: none;  
+        padding: 10px 20px;  
+        text-align: center;  
+        text-decoration: none;  
+        display: inline-block;  
+        font-size: 16px;  
+        margin: 4px 2px;  
+        cursor: pointer;  
+        border-radius: 4px;  
+        width: 100%;  
+    }  
+  
+    #form input[type="submit"]:hover {  
+        background-color: #0056b3;  
+    }  
+  
+    #log {  
+        background-color: #fff;  
+        padding: 10px;  
+        border-radius: 8px;  
+        margin-bottom: 20px; /* 在日志和表单之间添加一些间距 */  
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 可选：为日志添加阴影 */  
+        width: 300px; /* 与表单相同的宽度 */  
+        text-align: left; /* 日志文本左对齐 */  
+        word-wrap: break-word; /* 确保长文本换行 */  
+    }  
 </style>
 </head>
 <body>
